--- a/about.html
+++ b/about.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>من نحن | متجر أحمر</title>
-    <link rel="stylesheet" href="style2.css">
+    <title>من نحن | متجر ألوان</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
     <div class="header">
         <div class="container">
             <div class="navbar">
-                <div class="logo">متجر أحمر</div>
+                <div class="logo">متجر ألوان</div>
                 <nav>
                     <ul id="MenuItems">
                         <li><a href="index.html">الرئيسية</a></li>
@@ -31,7 +31,7 @@
             <div class="row">
                 <div class="col-2">
                     <h1>من نحن</h1>
-                    <p>نحن متجر أحمر، وجهتك المفضلة للتسوق الإلكتروني<br>
+                    <p>نحن متجر ألوان، وجهتك المفضلة للتسوق الإلكتروني<br>
                     نقدم أفضل المنتجات بأعلى جودة وأفضل الأسعار</p>
                 </div>
                 <div class="col-2">
@@ -70,21 +70,18 @@
             <div class="row">
                 <div class="col-3">
                     <div class="stat-item">
-                        <i class="fas fa-users"></i>
                         <h3>50,000+</h3>
                         <p>عميل سعيد</p>
                     </div>
                 </div>
                 <div class="col-3">
                     <div class="stat-item">
-                        <i class="fas fa-box"></i>
                         <h3>100,000+</h3>
                         <p>منتج متوفر</p>
                     </div>
                 </div>
                 <div class="col-3">
                     <div class="stat-item">
-                        <i class="fas fa-shipping-fast"></i>
                         <h3>500,000+</h3>
                         <p>طلب تم توصيله</p>
                     </div>
@@ -144,38 +141,7 @@
 
     <!-- التذييل -->
     <div class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="footer-col-1">
-                    <h3>حمل تطبيقنا</h3>
-                    <p>حمل التطبيق لهواتف أندرويد و iOS.</p>
-                    <div class="app-logo">
-                        <img src="images/play-store.png" alt="">
-                        <img src="images/app-store.png" alt="">
-                    </div>
-                </div>
-                <div class="footer-col-2">
-                    <img src="images/logo-white.png" alt="">
-                    <p>هدفنا هو جعل متعة وفوائد الرياضة متاحة للكثيرين بطريقة مستدامة.</p>
-                </div>
-                <div class="footer-col-3">
-                    <h3>روابط مفيدة</h3>
-                    <ul>
-                        <li>كوبونات</li>
-                        <li>سياسة الإرجاع</li>
-                    </ul>
-                </div>
-                <div class="footer-col-4">
-                    <h3>تابعنا</h3>
-                    <ul>
-                        <li>لينكد إن</li>
-                        <li>جيت هاب</li>
-                    </ul>
-                </div>
-            </div>
-            <hr>
             <p class="copyright">حقوق الطبع والنشر@pranav301999</p>
-        </div>
     </div>
 
     
